--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <title>Shoelace</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="assets/shoelace/themes/base.css">
+  <script type="module" src="/dist/shoelace/assets/shoelace/shoelace.js"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.0.0-beta.35/dist/themes/base.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
